# bitcoin-lightning-pirate-trading-game

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Learnings Of Polar Setup.md  README.md  index.html  package-lock.json  package.json
.cache/list-skill-repetoir/: skill-counts.tsv
.codex/: README.md
.codex/rules/: dioxus-0.7-workflow.md  frontend-design.md
.codex/skills/add-feature/: SKILL.md
.codex/skills/codex-yolo/: SKILL.md
.codex/skills/dioxus-bitcoin-lightning-game/: SKILL.md
.github/workflows/: export-web-build-to-github-pages.yml
.specify/: feature.json
.specify/memory/: constitution.md
Documentation/: DioxusFeatureMatrix.md
Scripts/Common/: InstallDependencies.ps1  RunPolarMcp.ps1  RunWeb.ps1  StopWeb.ps1
Scripts/Other/: RunDesktop.ps1  RunPolarMcp.ps1  RunScriptTests.ps1  RunTests.ps1  StopWeb.ps1
specs/001-status-quo-baseline/: spec.md
specs/002-lightning-game-poc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-polar-robustness/: plan.md  spec.md  tasks.md
specs/004-game-view/: spec.md
specs/005-tra-inventory-assets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-game-treasury/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-qr-lightning-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-polar-mcp-stability/: plan.md  polar-call-inventory.md  spec.md  tasks.md  verification-notes.md
specs/010-nostr-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
