[workspace]
resolver = "2"
default-members = ["packages/web"]
members = [
    "packages/lightning-service",
    "packages/ui",
    "packages/web",
    "packages/desktop",
]

[workspace.dependencies]
dioxus = { version = "0.7.7", features = ["router"] }

# workspace
lightning-service = { path = "packages/lightning-service" }
ui = { path = "packages/ui" }
